--- a/kyosai-back/.env
+++ b/kyosai-back/.env
@@ -34,3 +34,9 @@ APP_SECRET=e4baf5295a4fd85c8d7a50b9d0921d2b
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=752ea0201236739665268f0d72512b3b
+###< lexik/jwt-authentication-bundle ###
