--- a/kyosai-back/config/packages/security.yaml
+++ b/kyosai-back/config/packages/security.yaml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        App\Entity\Utilisateurs:
+        App\Entity\Users:
             algorithm: bcrypt
             
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -8,8 +8,11 @@ security:
 
         in_database:
             entity:
-                class: App\Entity\Utilisateurs
+                class: App\Entity\Users
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
+     
+     
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -20,14 +23,23 @@ security:
             provider: in_database
     
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
+        login:
+            pattern:  ^/api/login
+            stateless: true
+            anonymous: true
+            json_login:
+                check_path:               /api/login_check
+                success_handler:          lexik_jwt_authentication.handler.authentication_success
+                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
+        api:
+            pattern:   ^/api
+            stateless: true
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    # access_control:
+    #     - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    #     - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
