--- a/kyosai-back/config/packages/security.yaml
+++ b/kyosai-back/config/packages/security.yaml
@@ -5,7 +5,6 @@ security:
             
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-
         in_database:
             entity:
                 class: App\Entity\Users
@@ -17,11 +16,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            anonymous: true
-            lazy: true
-            provider: in_database
-    
+
 
         login:
             pattern:  ^/api/login
@@ -29,17 +24,26 @@ security:
             anonymous: true
             json_login:
                 check_path:               /api/login_check
+                username_path:            email
+                password_path:            password   
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
         api:
             pattern:   ^/api
             stateless: true
+            provider: in_database
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
+        main:
+            anonymous: true
+            lazy: true
+            provider: in_database
+    
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    # access_control:
-    #     - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    #     - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+    access_control:
+          - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+     
