--- a/kyosai-back/config/packages/security.yaml
+++ b/kyosai-back/config/packages/security.yaml
@@ -36,7 +36,7 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-        
+
         main:
             anonymous: true
             lazy: true
@@ -45,8 +45,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-          - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-          - { path: ^/api,       roles: IS_AUTHENTICATED_ANONYMOUSLY }
-          - { path: ^/api/shop,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
-   
-         
+          - { path: ^/api/login,               roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/api/admin,                     roles: ROLE_MATOU }
+          - { path: ^/api/shop,                roles: ROLE_MATOU }
+          - { path: ^/api/category/list,       roles: ROLE_MATOU }
