--- a/kyosai-back/composer.json
+++ b/kyosai-back/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "amphp/http-client": "^4.5",
         "api-platform/core": "^2.6",
         "cocur/slugify": "^4.0",
         "composer/package-versions-deprecated": "1.11.99.1",
