feat: send mail

--- a/kyosai-back/.env
+++ b/kyosai-back/.env
@@ -37,5 +37,10 @@ JWT_PASSPHRASE=overseasmedia
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=smtp://localhost	
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=gmail://michaelbecquer7@gmail.com:Micsacred54@default?verify_peer=0
+###< symfony/google-mailer ###
