--- a/kyosai-back/.env
+++ b/kyosai-back/.env
@@ -42,5 +42,5 @@ JWT_PASSPHRASE=overseasmedia
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail://michaelbecquer7@gmail.com:Micsacred54@default?verify_peer=0
+ MAILER_DSN=gmail://:pouet@default?verify_peer=0
 ###< symfony/google-mailer ###
