--- a/kyosai-back/config/routes.yaml
+++ b/kyosai-back/config/routes.yaml
@@ -3,4 +3,4 @@
 #    controller: App\Controller\DefaultController::index
 api_login_check:
   path: /api/login_check
-  controller: App\Controller\SecurityController::index
+  controller: App\Controller\UserController::loginCheck
